--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,19 +10,14 @@
         android:id="@+id/countriesLabel"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/holo_green_dark"
         android:gravity="center"
-        android:text="Hello World!"
+        android:textAllCaps="true"
+        android:textColor="@android:color/primary_text_dark"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/citiesLabels"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,8 +25,11 @@
         android:id="@+id/citiesLabels"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/holo_orange_dark"
         android:gravity="center"
-        android:text="TextView"
+        android:textAllCaps="true"
+        android:textColor="@android:color/primary_text_dark"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/restaurantsLabels"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -42,12 +40,25 @@
         android:id="@+id/restaurantsLabels"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@android:color/holo_red_dark"
         android:gravity="center"
-        android:text="TextView"
+        android:textAllCaps="true"
+        android:textColor="@android:color/primary_text_dark"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/citiesLabels" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
