--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,14 @@
         android:textAllCaps="true"
         android:textColor="@android:color/primary_text_dark"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/citiesLabels"
+        app:layout_constraintBottom_toTopOf="@+id/citiesLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/citiesLabels"
+        android:id="@+id/citiesLabel"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@android:color/holo_orange_dark"
@@ -30,14 +30,14 @@
         android:textAllCaps="true"
         android:textColor="@android:color/primary_text_dark"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/restaurantsLabels"
+        app:layout_constraintBottom_toTopOf="@+id/restaurantsLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/countriesLabel" />
 
     <TextView
-        android:id="@+id/restaurantsLabels"
+        android:id="@+id/restaurantsLabel"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@android:color/holo_red_dark"
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/citiesLabels" />
+        app:layout_constraintTop_toBottomOf="@+id/citiesLabel" />
 
     <ProgressBar
         android:id="@+id/progressBar"
